--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,26 @@
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
- nav{
-    width: 100%;
-    height: 100px;
-    background-color: navy;
-    display: inline-block;
-  }
-  nav ul{
-    float: right;
-    list-style-type: none;
-  }
-  nav ul li{
-    display: inline-block;
-    margin: 15px;
-  }
-  nav ul li a{
-    color: whitesmoke;
-    text-decoration: none;
-    font-weight: bolder;
-  }
-  img{
+.column {
     float: left;
-    width: 100px;
-    height: 100px
-  }
+    width: 20%;
+    padding: 1px;
+    height: 300px;
+}
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+#c1 {
+    background-color: lightblue;
+}
+#c2 {
+    background-color: lightgreen;
+}
+#c3 {
+    background-color: lightcoral;
+}
+#c4 {
+    background-color: lightgray;
+}
+div text {
+    size: 100px;
+}
